Put ElasticSearch logo on PolyConf website
Former-commit-id: ca8a266edbd416773979e256c30a05a28f473a40
Former-commit-id: 6f566c0afc430fc387faeac258448014ea1211ac
Former-commit-id: fe09c184eb35c7c33a9ae469ecd3eda7e861b9ab

--- a/index.html
+++ b/index.html
@@ -641,52 +641,50 @@ Leah is currently a software engineer at Google. She spent the Spring of 2013 at
 
 		  </div>
 
-      <!--
 			<h3 class="sponsor-header">Supporters</h3>
 		  <div class="container">
 				<div class="supporters">
 					<ul>
 						<li class="supporter">
-							<div class="logo"><img src="assets/logo-placeholder.svg" /></div>
+							<div class="logo"><a href="https://www.elastic.co/"><img src="assets/supporters/elastic.png" /></a></div>
 						</li>
-						<li class="supporter">
-							<div class="logo"><img src="assets/logo-placeholder.svg" /></div>
-						</li>
-						<li class="supporter">
-							<div class="logo"><img src="assets/logo-placeholder.svg" /></div>
-						</li>
-						<li class="supporter">
-							<div class="logo"><img src="assets/logo-placeholder.svg" /></div>
-						</li>
-						<li class="supporter">
-							<div class="logo"><img src="assets/logo-placeholder.svg" /></div>
-						</li>
-						<li class="supporter">
-							<div class="logo"><img src="assets/logo-placeholder.svg" /></div>
-						</li>
-						<li class="supporter">
-							<div class="logo"><img src="assets/logo-placeholder.svg" /></div>
-						</li>
-						<li class="supporter">
-							<div class="logo"><img src="assets/logo-placeholder.svg" /></div>
-						</li>
-						<li class="supporter">
-							<div class="logo"><img src="assets/logo-placeholder.svg" /></div>
-						</li>
-						<li class="supporter">
-							<div class="logo"><img src="assets/logo-placeholder.svg" /></div>
-						</li>
-						<li class="supporter">
-							<div class="logo"><img src="assets/logo-placeholder.svg" /></div>
-						</li>
-						<li class="supporter">
-							<div class="logo"><img src="assets/logo-placeholder.svg" /></div>
-						</li>
+						<!--<li class="supporter">-->
+							<!--<div class="logo"><img src="assets/logo-placeholder.svg" /></div>-->
+						<!--</li>-->
+						<!--<li class="supporter">-->
+							<!--<div class="logo"><img src="assets/logo-placeholder.svg" /></div>-->
+						<!--</li>-->
+						<!--<li class="supporter">-->
+							<!--<div class="logo"><img src="assets/logo-placeholder.svg" /></div>-->
+						<!--</li>-->
+						<!--<li class="supporter">-->
+							<!--<div class="logo"><img src="assets/logo-placeholder.svg" /></div>-->
+						<!--</li>-->
+						<!--<li class="supporter">-->
+							<!--<div class="logo"><img src="assets/logo-placeholder.svg" /></div>-->
+						<!--</li>-->
+						<!--<li class="supporter">-->
+							<!--<div class="logo"><img src="assets/logo-placeholder.svg" /></div>-->
+						<!--</li>-->
+						<!--<li class="supporter">-->
+							<!--<div class="logo"><img src="assets/logo-placeholder.svg" /></div>-->
+						<!--</li>-->
+						<!--<li class="supporter">-->
+							<!--<div class="logo"><img src="assets/logo-placeholder.svg" /></div>-->
+						<!--</li>-->
+						<!--<li class="supporter">-->
+							<!--<div class="logo"><img src="assets/logo-placeholder.svg" /></div>-->
+						<!--</li>-->
+						<!--<li class="supporter">-->
+							<!--<div class="logo"><img src="assets/logo-placeholder.svg" /></div>-->
+						<!--</li>-->
+						<!--<li class="supporter">-->
+							<!--<div class="logo"><img src="assets/logo-placeholder.svg" /></div>-->
+						<!--</li>-->
 
 					</ul>
 				</div>
 		  </div>
-      -->
 
 			<h3 class="sponsor-header">Partners</h3>
 
