Put Media Partners on PolyConf website Bitspiration & InfoQ
Former-commit-id: e4a068719f8abbd6591e6f05387cd2c0354f9022
Former-commit-id: 32066309034a81bf6a6f5245c96dfbfbd99178d1
Former-commit-id: c6f0857be1f3b8105e11a8651ddcdc545eb84c8d

--- a/index.html
+++ b/index.html
@@ -702,6 +702,8 @@ Leah is currently a software engineer at Google. She spent the Spring of 2013 at
                         <li class="partner"><a href="http://berlin.pyladies.com/"><img src="assets/partners/pyladies_berlin.png" /></a></li>
                         <li class="partner"><a href="http://pyladies.pl/"><img src="assets/partners/pyladies_poland.png" /></a></li>
                         <li class="partner"><a href="http://railsgirlsberlin.de/"><img src="assets/partners/railsgirls.svg" /></a></li>
+                        <li class="partner bitspiration"><a href="http://bitspiration.com/"><img src="assets/partners/bitspiration.png" /></a></li>
+                        <li class="partner infoq"><a href="http://www.infoq.com/"><img src="assets/partners/infoq.png" /></a></li>
 
 					</ul>
 
