--- a/index.html
+++ b/index.html
@@ -704,6 +704,7 @@ Leah is currently a software engineer at Google. She spent the Spring of 2013 at
                         <li class="partner"><a href="http://railsgirlsberlin.de/"><img src="assets/partners/railsgirls.svg" /></a></li>
                         <li class="partner bitspiration"><a href="http://bitspiration.com/"><img src="assets/partners/bitspiration.png" /></a></li>
                         <li class="partner infoq"><a href="http://www.infoq.com/"><img src="assets/partners/infoq.png" /></a></li>
+                        <li class="partner techtrrrs"><a href="https://www.techtrrrs.at/"><img src="assets/partners/techtrrrs.png" /></a></li>
 
 					</ul>
 
