--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
   <script>
     function initialize() {
       var mapCanvas = document.getElementById('venue-map');
+      var coordinates = {
+          lat: 52.416228,
+          lng: 16.925608
+      };
       var mapOptions = {
-        center: new google.maps.LatLng(52.4120145,16.9202255),
+        center: new google.maps.LatLng(coordinates.lat,coordinates.lng),
         zoom: 16,
         panControl: true,
         zoomControl: true,
@@ -28,10 +32,10 @@
         },
         scrollwheel: false,
         mapTypeId: google.maps.MapTypeId.ROADMAP
-      }
+      };
       var map = new google.maps.Map(mapCanvas, mapOptions);
       var marker = new google.maps.Marker({
-          position: new google.maps.LatLng(52.4120145,16.9202255),
+          position: new google.maps.LatLng(coordinates.lat,coordinates.lng),
           map: map,
           title: 'Hello World!'
       });
