Add Squirrel as a bronze sponsor

--- a/index.html
+++ b/index.html
@@ -1026,6 +1026,9 @@ Leah is currently a software engineer at Google. She spent the Spring of 2013 at
 						<li class="bronze sponsor twilio">
 							<div class="logo"><a href="https://www.twilio.com/"><img src="assets/sponsors/twilio.png" /></a></div>
 						</li>
+						<li class="bronze sponsor squirrel">
+							<div class="logo"><a href="http://squirrel.me/"><img src="assets/sponsors/squirrel.png" /></a></div>
+						</li>
 					</ul>
 
 				</div>
