Add GameSys log on PolyConf website

--- a/index.html
+++ b/index.html
@@ -1029,6 +1029,9 @@ Leah is currently a software engineer at Google. She spent the Spring of 2013 at
 						<li class="bronze sponsor squirrel">
 							<div class="logo"><a href="http://squirrel.me/"><img src="assets/sponsors/squirrel.png" /></a></div>
 						</li>
+                        <li class="bronze sponsor gamesys">
+                            <div class="logo"><a href="http://www.gamesyscorporate.com/"><img src="assets/sponsors/gamesys_logo.png" /></a></div>
+                        </li>
 					</ul>
 
 				</div>
