--- a/index.html
+++ b/index.html
@@ -57,23 +57,10 @@
 <div id="wrapper">
 
   <header id="header" class="fixed">
+    
+    <span id="menu-name">Menu</span>
 
     <section class="content">
-
-      <nav id="main">
-        <ul>
-          <li><a href="#header">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#speakers">Speakers</a></li>
-          <li><a href="#venue">Venue</a></li>
-          <li><a href="#hotels">Hotels</a></li>
-          <li><a href="#codestarter">Young people</a></li>
-          <li><a href="#partners">Sponsors</a></li>
-          <li><a href="http://14.polyconf.com">Previous edition</a></li>
-          <li><a href="http://blog.polyconf.com">Blog</a></li>
-        </ul>
-      </nav>
-
 
       <figure id="logo"><img src="assets/logo.svg" alt="Poly Conf 2015"/></figure>
 
@@ -84,6 +71,9 @@
 
       <div id="the-bar">
 
+        <div class="register-now inline-block" style="margin-right: 2em">
+          <a href="#tickets" class="medium green button"><label>Register now</label></a>
+        </div>
         <div class="become-a-sponsor inline-block" style="margin-right: 2em">
           <a href="http://sponsor.polyconf.com/" class="medium blue button"><label>Become a sponsor</label></a>
         </div>
