improv: update tickets information

--- a/index.html
+++ b/index.html
@@ -1037,19 +1037,19 @@
 
             <li class="current batch"><div class="inside">
               <h4>Early Bird</h4>
-              <div class="price">99<small>EUR NET*</small></div>
-              <p class="dates text-center">till XXX May 6PM CET</p>
+              <div class="price">139<small>EUR NET*</small></div>
+              <p class="dates text-center">available now</p>
               <div class="buy-a-ticket text-center">
-                <a href="#" class="button">BUY NOW</a>
+                <a href="http://www.amiando.com/polyconf15.html" class="button">BUY NOW</a>
               </div>
             </div></li>
 
             <li class="future batch"><div class="inside">
               <h4>Regular</h4>
-              <div class="price">149<small>EUR NET*</small></div>
-              <p class="dates text-center">from XXX May 6PM CET</p>
+              <div class="price">192<small>EUR NET*</small></div>
+              <p class="dates text-center">available soon</p>
               <div class="buy-a-ticket text-center">
-                <a href="#" class="button alert">BUY SOON</a>
+                <a href="http://www.amiando.com/polyconf15.html" class="button alert">BUY SOON</a>
               </div>
             </div></li>
 
@@ -1060,8 +1060,8 @@
 
             <h3>Ticket includes the following things:</h3>
             <ul>
-              <li>Entry to the conference on October 30/31.</li>
-              <li>Entry to the opening and closing parties on the October 30 and 31.</li>
+              <li>Entry to the conference on July 2nd, 3rd and 4th.</li>
+              <li>Entry to the parties on each day of the conference.</li>
               <li>Access to satelite events and many opportunities to connect with people.</li>
               <li>Drinks &amp; Refreshments</li>
             </ul>
@@ -1077,7 +1077,6 @@
 
 
     <article id="venue-intro" class="fixed">
->>>>>>> Tickets
 
     <section class="content">
 
