improv: regular tickets
Former-commit-id: 8b4040d8045d55c189a00477a3f5b38c2af5cde8
Former-commit-id: d67a1af8cdce871af1943efe8a69a965cd17e805
Former-commit-id: 177e16a3fd141bb0f6cb42bafea82cbd82e43016

--- a/index.html
+++ b/index.html
@@ -1035,21 +1035,21 @@
 
           <ul class="batches">
 
-            <li class="current batch"><div class="inside">
+            <li class="future batch"><div class="inside">
               <h4>Early Bird</h4>
               <div class="price">139<small>EUR NET*</small></div>
-              <p class="dates text-center">available now</p>
+              <p class="dates text-center"></p>
               <div class="buy-a-ticket text-center">
-                <a href="http://www.amiando.com/polyconf15.html" class="button">BUY NOW</a>
+                <a href="http://www.amiando.com/polyconf15.html" class="button">SOLD OUT</a>
               </div>
             </div></li>
 
-            <li class="future batch"><div class="inside">
+            <li class="current batch"><div class="inside">
               <h4>Regular</h4>
               <div class="price">192<small>EUR NET*</small></div>
-              <p class="dates text-center">available soon</p>
+              <p class="dates text-center">available</p>
               <div class="buy-a-ticket text-center">
-                <a href="http://www.amiando.com/polyconf15.html" class="button alert">BUY SOON</a>
+                <a href="http://www.amiando.com/polyconf15.html" class="button alert">BUY NOW</a>
               </div>
             </div></li>
 
