--- a/index.html
+++ b/index.html
@@ -8,6 +8,18 @@
         content="PolyConf is a three-day, single track, multi-disciplinary conference on advanced technologies for programmers interested in polyglot approach to software development."/>
   <meta name="author" content="PolyConf HQ || Designed by true.pl"/>
 
+    <!-- Open Graph data -->
+  <meta property="og:title" content="PolyConf 15 A conference for polyglot programmers" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="http://polyconf.com/" />
+  <meta property="og:description" content="PolyConf is a three-day, single track, multi-disciplinary conference on advanced technologies for programmers interested in polyglot approach to software development." />
+  <meta property="og:image" content="http://polyconf.com/fb.jpg" />
+  <meta property="og:image:type" content="image/jpeg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:site_name" content="PolyConf" />
+  <meta property="og:locale" content="en_US" />
+
   <script src="//use.typekit.net/nxq5wzz.js"></script>
   <script>try {
     Typekit.load();
