speaker: add Netguru as a Silver sponsor

--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
             <div class="text">
               <h3>Christine Corbett Moran</h3>
 
-              <p class="title">Dev at Open WhisperSystems, Postdoctoral Researcher at Caltech</p>
+              <p class="title">Postdoctoral Researcher at Caltech</p>
 
               <p class="description">PhD in Theoretical Astrophysics at the University of Zurich. A postdoc in
                 Theoretical Physics at Caltech. I do research in computational astrophysics, high performance computing,
@@ -1669,6 +1669,13 @@
             <div class="logo">
               <a href="http://www.pl.capgemini-sdm.com/">
                 <img src="assets/sponsors/capgemini.png" />
+              </a>
+            </div>
+          </li>
+          <li class="silver sponsor">
+            <div class="logo">
+              <a href="#">
+                <img src="assets/sponsors/netguru.jpg" />
               </a>
             </div>
           </li>
