Added keynote speakers images

--- a/index.html
+++ b/index.html
@@ -1148,6 +1148,7 @@
                   <div class="short">
                     <div class="time">17:40 - 18:10</div>
                     <div class="name">
+                      <figure class="face" style="background-image: url(assets/speakers/christine_corbett.jpg)">&nbsp;</figure>
                       <span class="title">KEYNOTE</span>
                       <span class="person">Christine Corbett Moran</span>
                     </div>
@@ -1161,6 +1162,7 @@
                   <div class="short">
                     <div class="time">18:20 - 18:50</div>
                     <div class="name">
+                      <figure class="face" style="background-image: url(assets/speakers/william_byrd.jpg)">&nbsp;</figure>
                       <span class="title">KEYNOTE</span>
                       <span class="person">William Byrd</span>
                     </div>
@@ -1369,6 +1371,7 @@
                   <div class="short">
                     <div class="time">17:40 - 18:10</div>
                     <div class="name">
+                      <figure class="face" style="background-image: url(assets/speakers/bodil_stokke.jpg)">&nbsp;</figure>
                       <span class="title">KEYNOTE</span>
                       <span class="person">Bodil Stokke</span>
                     </div>
@@ -1382,6 +1385,7 @@
                   <div class="short">
                     <div class="time">18:20 - 18:50</div>
                     <div class="name">
+                      <figure class="face" style="background-image: url(assets/speakers/sam_tobin_hochstadt.jpg)">&nbsp;</figure>
                       <span class="title">KEYNOTE</span>
                       <span class="person">Sam Tobin-Hochstadt</span>
                     </div>
@@ -1590,6 +1594,7 @@
                   <div class="short">
                     <div class="time">17:40 - 18:10</div>
                     <div class="name">
+                      <figure class="face" style="background-image: url(assets/speakers/stefan_karpinski.jpg)">&nbsp;</figure>
                       <span class="title">KEYNOTE</span>
                       <span class="person">Stefan Karpinski</span>
                     </div>
@@ -1603,6 +1608,7 @@
                   <div class="short">
                     <div class="time">18:20 - 18:50</div>
                     <div class="name">
+                      <figure class="face" style="background-image: url(assets/speakers/robert_virding.jpg)">&nbsp;</figure>
                       <span class="title">KEYNOTE</span>
                       <span class="person">Robert Virding</span>
                     </div>
