Some more fixes

--- a/index.html
+++ b/index.html
@@ -1268,11 +1268,11 @@
   
                 <!-- LUNCH -->
   
-                <li class="event">
+                <li class="event lunch">
                   <div class="short">
                     <div class="time">12:30 - 13:45</div>
                     <div class="name">
-                      <span class="title">Registration / Lunch</span>
+                      <span class="title">Lunch</span>
                     </div>
                   </div>
                 </li>                
@@ -1500,7 +1500,7 @@
                   </div>
                 </li>                
   
-                <li class="event registration">
+                <li class="event animation">
                   <div class="short">
                     <div class="time">13:45 - 14:00</div>
                     <div class="name">
