--- a/index.html
+++ b/index.html
@@ -2236,6 +2236,7 @@
       <li><a href="#header">Home</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="#speakers">Speakers</a></li>
+      <li><a href="#agenda">Agenda</a></li>
       <li><a href="#tickets">Tickets  </a></li>
       <li><a href="#venue">Venue</a></li>
       <li><a href="#hotels">Hotels</a></li>
