Added JS language to Sam Tobin

--- a/index.html
+++ b/index.html
@@ -498,6 +498,7 @@
                 module system for ES2015, the next version of JavaScript. </p>
               <ul class="tags">
                 <li class="erl">Racket</li>
+                <li class="js">JavaScript</li>
               </ul>
             </div>
           </div>
