talk: update title

--- a/index.html
+++ b/index.html
@@ -1424,7 +1424,7 @@
                   <div class="short">
                     <div class="time">9:40 - 10:10</div>
                     <div class="name">
-                      <span class="title">TBA</span>
+                      <span class="title">Jump Start ClojureScript</span>
                       <span class="person">Anna Pawlicka</span>
                     </div>
                   </div>
