improv: sponsors section
Put Mirantis logo on PolyConf website

Closes Put Mirantis logo on PolyConf website [0:10]

--- a/index.html
+++ b/index.html
@@ -505,7 +505,7 @@
         </li>
         <li class="speaker">
           <div class="inside">
-            <div class="img">
+            <div class="img">1
               <figure>
                 <a class="face" style="background-image: url(assets/speakers/joe_nash.jpg)">&nbsp;</a>
                   <span class="links">
@@ -1875,27 +1875,24 @@
     </div>
     -->
 
-    <!--
+
     <h3 class="sponsor-header">Gold sponsors</h3>
     <div class="container">
       <div class="gold sponsors">
         <ul>
           <li class="gold sponsor">
-            <div class="logo"><img src="assets/logo-placeholder.svg" /></div>
-            <p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Curabitur blandit tempus porttitor. Morbi leo risus, porta ac consectetur ac, vestibulum at eros.</p>
-          </li>
-          <li class="gold sponsor">
-            <div class="logo"><img src="assets/logo-placeholder.svg" /></div>
-            <p>Vestibulum id ligula porta felis euismod semper. Sed posuere consectetur est at lobortis. Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
-          </li>
-          <li class="gold sponsor">
-            <div class="logo"><img src="assets/logo-placeholder.svg" /></div>
-            <p>Vivamus sagittis lacus vel augue laoreet rutrum faucibus dolor auctor. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.</p>
+            <div class="logo"><img src="assets/sponsors/mirantis.svg" /></div>
+            <p>
+              Mirantis is the world’s leading OpenStack company. Mirantis delivers all the software, services, training and support needed for running OpenStack Cloud.</br>
+              Among the top three companies worldwide in contributing open source software to OpenStack, Mirantis has helped build and deploy some of the largest OpenStack clouds at companies such as Cisco, Comcast, Ericsson, NASA, PayPal, Symantec, Samsung, WebEx.
+            </p>
+            <p>
+              OpenStack is to cloud computing what Linux was to open source and operating systems. It unlocks distributed applications, accelerates innovation, and makes programmable infrastructure frictionless to access and vendor-neutral. It transforms virtualization from an efficiency tactic to a whole new compute paradigm.
+            </p>
           </li>
         </ul>
       </div>
     </div>
-    -->
 
     <h3 class="sponsor-header">Silver sponsors</h3>
     <div class="container">
