fix: Netguru link
Former-commit-id: f430a068d42c60779a03e5c75efcbca78f2fd9ac
Former-commit-id: 7836d83a661657d11be2ae880a48b6c2c145a28e
Former-commit-id: c142bd1eb00b646f7af97a62a7ec1f0835561271

--- a/index.html
+++ b/index.html
@@ -1907,7 +1907,7 @@
           </li>
           <li class="silver sponsor">
             <div class="logo">
-              <a href="#">
+              <a href="https://netguru.co/">
                 <img src="assets/sponsors/netguru.jpg" />
               </a>
             </div>
