--- a/index.html
+++ b/index.html
@@ -2009,7 +2009,7 @@
           <li class="partner infoq"><a href="http://www.infoq.com/"><img src="assets/partners/infoq.png"/></a></li>
           <li class="partner techtrrrs"><a href="https://www.techtrrrs.at/"><img
               src="assets/partners/techtrrrs.png"/></a></li>
-
+          <li class="partner"><a href="http://devtalk.pl/"><img src="assets/partners/devtalk.jpeg"/></a></li>
         </ul>
 
       </div>
