improv: bronze sponsors
Put Stack Builders logo on PolyConf website

--- a/index.html
+++ b/index.html
@@ -1935,6 +1935,10 @@
             <div class="logo"><a href="http://www.gamesyscorporate.com/"><img
                 src="assets/sponsors/gamesys_logo.png"/></a></div>
           </li>
+          <li class="bronze sponsor stackbuilders">
+            <div class="logo"><a href="http://www.stackbuilders.com/"><img
+                src="assets/sponsors/stack_builders.png"/></a></div>
+          </li>
         </ul>
 
       </div>
