--- a/index.html
+++ b/index.html
@@ -1751,18 +1751,17 @@
             <li><a href="http://en.purohotel.pl/poznan">Book hotel</a></li>
           </ul>
         </div>
-        <!--<div class="hotel">-->
-          <!--<h3>Hotel Stare Miasto</h3>-->
+        <div class="hotel">
+          <h3>Hotel Stare Miasto</h3>
 
-          <!--<p class="address">ul. Rybaki 36, 61-884 Poznań Poland</p>-->
-          <!--<h4>Moderate</h4>-->
-          <!--<ul class="links">-->
-            <!--<li><a href="http://www.hotelstaremiasto.pl/index.php/lan/en/a/1/b/">Website</a></li>-->
-            <!--<li><a-->
-                <!--href="http://www.hotelstaremiasto.pl/index.php/lan/en/a/6/b/2/ins/tak?spam=337&dod=2015-07-02&ok=next&ddo=2015-07-04">Book-->
-              <!--hotel</a></li>-->
-          <!--</ul>-->
-        <!--</div>-->
+          <p class="address">ul. Rybaki 36, 61-884 Poznań Poland</p>
+          <h4>Moderate</h4>
+          <ul class="links">
+            <li><a href="http://www.hotelstaremiasto.pl/index.php/lan/en/a/1/b/">Website</a></li>
+            <li><a
+                href="http://www.hotelstaremiasto.pl/index.php/lan/en/a/6/b/2/ins/tak?spam=337&dod=2015-07-02&ok=next&ddo=2015-07-04">Book hotel</a></li>
+          </ul>
+        </div>
         <div class="hotel">
           <h3>Hotel Ikar</h3>
 
