improv: sponsors/partners horizontal position
Align to the center sponsors logos

--- a/index.html
+++ b/index.html
@@ -1922,7 +1922,7 @@
         <ul>
           <li class="bronze sponsor">
             <div class="logo"><a href="https://www-ssl.intel.com/content/www/us/en/homepage.html"><img
-                src="assets/sponsors/intel.png"/></a></div>
+                src="assets/sponsors/intel2.png"/></a></div>
           </li>
           <li class="bronze sponsor twilio">
             <div class="logo"><a href="https://www.twilio.com/"><img src="assets/sponsors/twilio.png"/></a></div>
@@ -2005,7 +2005,7 @@
           <li class="partner"><a href="http://torun.jug.pl/"><img src="assets/partners/jugTorun.png"/></a></li>
           <li class="partner"><a href="http://berlin.pyladies.com/"><img src="assets/partners/pyladies_berlin.png"/></a>
           </li>
-          <li class="partner"><a href="http://pyladies.pl/"><img src="assets/partners/pyladies_poland.png"/></a></li>
+          <li class="partner pyladies-poland"><a href="http://pyladies.pl/"><img src="assets/partners/pyladies_poland.png"/></a></li>
           <li class="partner"><a href="http://railsgirlsberlin.de/"><img src="assets/partners/railsgirls.svg"/></a></li>
           <li class="partner bitspiration"><a href="http://bitspiration.com/"><img
               src="assets/partners/bitspiration.png"/></a></li>
