"More" first implementation

--- a/index.html
+++ b/index.html
@@ -1067,6 +1067,10 @@
                   <div class="long">
                     <p>TBA</p>
                   </div>
+                  <div class="buttons">
+                    <span class="close-button">Close</span>
+                    <span class="more-button">More</span>
+                  </div>
                 </li>
   
   
