--- a/index.html
+++ b/index.html
@@ -1991,15 +1991,15 @@ Computer Science in Haskell 15 years ago, and has been a user and proponent of f
     <div class="container">
       <div class="gold sponsors">
         <ul>
-          <li class="gold sponsor">
+          <li class="gold sponsor one">
             <div class="logo"><img src="assets/sponsors/mirantis.svg" /></div>
+            <div class="description">
             <p>
               Mirantis is the world’s leading OpenStack company. Mirantis delivers all the software, services, training and support needed for running OpenStack Cloud.</br>
-              Among the top three companies worldwide in contributing open source software to OpenStack, Mirantis has helped build and deploy some of the largest OpenStack clouds at companies such as Cisco, Comcast, Ericsson, NASA, PayPal, Symantec, Samsung, WebEx.
-            </p>
-            <p>
+              Among the top three companies worldwide in contributing open source software to OpenStack, Mirantis has helped build and deploy some of the largest OpenStack clouds at companies such as Cisco, Comcast, Ericsson, NASA, PayPal, Symantec, Samsung, WebEx.<br>
               OpenStack is to cloud computing what Linux was to open source and operating systems. It unlocks distributed applications, accelerates innovation, and makes programmable infrastructure frictionless to access and vendor-neutral. It transforms virtualization from an efficiency tactic to a whole new compute paradigm.
             </p>
+            </div>
           </li>
         </ul>
       </div>
