--- a/index.html
+++ b/index.html
@@ -1951,6 +1951,7 @@
         <ul>
           <li class="supporter">
             <div class="logo"><a href="https://www.elastic.co/"><img src="assets/supporters/elastic.png"/></a></div>
+            <div class="logo"><a href="http://www.pragprog.com/reviewers"><img src="assets/supporters/pragprog.png"/></a></div>
           </li>
           <!--<li class="supporter">-->
           <!--<div class="logo"><img src="assets/logo-placeholder.svg" /></div>-->
