--- a/index.html
+++ b/index.html
@@ -2126,6 +2126,7 @@ Computer Science in Haskell 15 years ago, and has been a user and proponent of f
           <li class="partner techtrrrs"><a href="https://www.techtrrrs.at/"><img
               src="assets/partners/techtrrrs.png"/></a></li>
           <li class="partner"><a href="http://devtalk.pl/"><img src="assets/partners/devtalk.jpeg"/></a></li>
+          <li class="partner infoq"><a href="https://skillsmatter.com/"><img src="assets/partners/skills_matter_large.png"/></a></li>
         </ul>
 
       </div>
