improv: Bodil's talk & abstract
Put Bodil's talk title and abstract on PolyConf website


Former-commit-id: ca03d0c3d5431a838ef9990ece31e66fa438380c
Former-commit-id: 764494c2e8c55606706b3655014daee38efb8bf0
Former-commit-id: 9b4e0af92bcac6d6d3193fc7d656270ed996c028

--- a/index.html
+++ b/index.html
@@ -1368,12 +1368,13 @@
                     <div class="time">17:40 - 18:10</div>
                     <div class="name">
                       <figure class="face" style="background-image: url(assets/speakers/bodil_stokke.jpg)">&nbsp;</figure>
-                      <span class="title">TBA</span>
+                      <span class="title">Post-FRP Frontend Programming</span>
                       <span class="person">Bodil Stokke</span>
                     </div>
                   </div>
                   <div class="long">
-                    <p>TBA</p>
+                    <p>Functional Reactive Programming was a thing that happened in the 90s. We’ve been rehashing these ideas, usually not even getting them right, for the past 20 years, and very little has happened to advance the state of the art.
+                      Very little, but that’s still something. We’re going to explore some of the advances we’ve made recently, with a particular focus on PureScript and the Halogen library, introducing concepts such as signal functions to improve the composability and type safety of UI components.</p>
                   </div>
                 </li>
 
