workshops: add Matthias

--- a/index.html
+++ b/index.html
@@ -1660,7 +1660,7 @@
 
       <div class="workshop">
         
-        <h2>Introduction to Haskell <span class="author">Matthias Fischmann</span><figure>&nbsp;</figure></h2>
+        <h2>Introduction to Haskell <span class="author">Matthias Fischmann</span><figure class="face" style="background-image: url(assets/speakers/matthias_fischmann.jpg)">&nbsp;</figure></h2>
         
         <div class="row">
           <div class="about">
