--- a/index.html
+++ b/index.html
@@ -1029,6 +1029,7 @@
                       <span class="person">Cross-runtime dataflow programming with Flowhub</span>
                       <span class="person">Write a Relational Scheme Interpreter in miniKanren</span>
                       <span class="person">Mobile development in the smart way with ionicframework</span>
+                      <span class="person">Why should you learn to program Commodore 64 this year?</span>
                     </div>
                   </div>
                   <div class="long">
@@ -1666,12 +1667,12 @@
           <div class="about">
             <h3>About workshop</h3>
             <p>Haskell is an elegant and fascinating language that has made purely
-functional programming practical.  In this tutorial, you will learn
-about the programming concepts that people like it for, such as
-pattern matching, type inference, partial evaluation, bounded
-polymorphic functions, and many more if time permits.  I will
-structure this workshop around examples that I type into an editor and
-run in an interactive interpreter.</p>
+              functional programming practical.  In this tutorial, you will learn
+              about the programming concepts that people like it for, such as
+              pattern matching, type inference, partial evaluation, bounded
+              polymorphic functions, and many more if time permits.  I will
+              structure this workshop around examples that I type into an editor and
+              run in an interactive interpreter.</p>
             <p>This is an all-new release of the tutorial Alexander Ulrich and I gave at <a href="http://bobkonf.de/2015/fischmann.html">bobkonf.de/2015</a>.</p>
             <h4>Prerequisites</h4>
             <ul>
@@ -1682,7 +1683,7 @@ run in an interactive interpreter.</p>
           <div class="bio">
             <h3>About Matthias</h3>
             <p>Matthias has implemented his thesis at the Max Planck Institute for
-Computer Science in Haskell 15 years ago, and has been a user and proponent of functional programming ever since. He works as a software consultant for <a href="http://well-typed.com/">well-typed.com</a> and is CEO at <a href="http://zerobuzz.net/">zerobuzz.net</a>.</p>
+              Computer Science in Haskell 15 years ago, and has been a user and proponent of functional programming ever since. He works as a software consultant for <a href="http://well-typed.com/">well-typed.com</a> and is CEO at <a href="http://zerobuzz.net/">zerobuzz.net</a>.</p>
           </div>
         </div>
       </div>
@@ -1728,25 +1729,47 @@ Computer Science in Haskell 15 years ago, and has been a user and proponent of f
 
       <div class="container">
         <div class="workshop">
-        
-        <h2>Mobile development in the smart way with ionicframework<span class="author">Łukasz Olejarczuk</span><figure class="face" style="background-image: url(assets/speakers/lukasz_olejarczuk.jpg)">&nbsp;</figure></h2>
-        
-        <div class="row">
-          <div class="about">
-            <h3>About workshop</h3>
-            <p>In this workshop you will be provided with answers to the following questions: How to create hybrid mobile applications? What can hybrid mobile applications do? The Workshop will be using <a href="http://devmeetings.pl/en">devmeetings</a> convention and platform for better and more rapid development. "</p>
-          </div>
-          <div class="bio">
-            <h3>About Łukasz</h3>
-            <p>Łukasz is a technology evangelist and software developer at Bank Zachodni WBK where he is creating a wide variety of state-of-the-art applications. Now he is strongly focused on mobile hybrid applications in the enterprise world. </p>
+
+          <h2>Mobile development in the smart way with ionicframework<span class="author">Łukasz Olejarczuk</span><figure class="face" style="background-image: url(assets/speakers/lukasz_olejarczuk.jpg)">&nbsp;</figure></h2>
+
+          <div class="row">
+            <div class="about">
+              <h3>About workshop</h3>
+              <p>In this workshop you will be provided with answers to the following questions: How to create hybrid mobile applications? What can hybrid mobile applications do? The Workshop will be using <a href="http://devmeetings.pl/en">devmeetings</a> convention and platform for better and more rapid development. "</p>
+            </div>
+            <div class="bio">
+              <h3>About Łukasz</h3>
+              <p>Łukasz is a technology evangelist and software developer at Bank Zachodni WBK where he is creating a wide variety of state-of-the-art applications. Now he is strongly focused on mobile hybrid applications in the enterprise world. </p>
+            </div>
           </div>
         </div>
       </div>
 
+      <div class="container">
+        <div class="workshop">
 
-    </div>
+          <h2>Why should you learn to program Commodore 64 this year?<span class="author">Michał Taszycki</span><figure class="face" style="background-image: url(assets/speakers/michal_taszycki.jpg)">&nbsp;</figure></h2>
 
-  </article>
+          <div class="row">
+            <div class="about">
+              <h3>About workshop</h3>
+              <p>I know that you already are a skilled software developer, designer or architect. You can craft beautiful and clean object oriented code. You can test and maintain it well and I manage complex abstractions of underlying domain models.</p>
+              <p>I want to show you something entirely different...</p>
+              <p>Remember Commodore 64? The highest selling computer model of all time?</p>
+              <p>Sadly it's not produced anymore for more than 20 years. But did you know that more than **50 new games** get released every year for this machine?</p>
+              <p>What if I told you that learning to program this ancient machine will make you a better developer?</p>
+              <p>Unique set of programming constraints, interesting hardware and a large community of enthusiasts make programming C64 a refreshing experience. It is not something that you will use directly in your day job. But learning 6510/6502 assembly will expand your perspective, especially if you've never had a chance to touch low level code.</p>
+              <p>It's also really fun :)</p>
+            </div>
+            <div class="bio">
+              <h3>About Michał</h3>
+              <p>Michal is a señor software developer at <a href="http://gunpowderlabs.com">Gunpowder Labs</a>, where he works on creating great web and mobile apps for external clients. He strives to improve as a programmer and enjoys sharing the knowledge during Code Retreats and the Programming Workout project. He is also passionate about programming ancient computers and teaching others how to do it at <a href="http://64bites.com">64bites.com</a>.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+    </article>
 
     <article id="tickets-intro" class="fixed">
 
