--- a/index.html
+++ b/index.html
@@ -1881,17 +1881,17 @@
           <h3>Puro Hotel</h3>
 
           <p class="address">Stawna 12 61-759 Poznań Poland</p>
-          <h4>Expensive</h4>
+          <h4>Moderate</h4>
           <ul class="links">
             <li><a href="http://en.purohotel.pl/poznan">Website</a></li>
-            <li><a href="http://en.purohotel.pl/poznan">Book hotel</a></li>
+            <li><a href="http://upperweb.profitroom.pl/pl/booking/details/wrap/purohotelpoznan/42471">Book hotel (Special Limited Offer)</a></li>
           </ul>
         </div>
         <div class="hotel">
           <h3>Hotel Stare Miasto</h3>
 
           <p class="address">ul. Rybaki 36, 61-884 Poznań Poland</p>
-          <h4>Moderate</h4>
+          <h4>Expensive</h4>
           <ul class="links">
             <li><a href="http://www.hotelstaremiasto.pl/index.php/lan/en/a/1/b/">Website</a></li>
             <li><a
