speaker: Przemyslaw Kaminski

--- a/index.html
+++ b/index.html
@@ -532,25 +532,18 @@
           <div class="inside">
             <div class="img">
               <figure>
-                <a class="face" style="background-image: url(assets/speakers/anna_pawlicka.jpg)">&nbsp;</a>
+                <a class="face" style="background-image: url(assets/speakers/przemyslaw_kaminski.jpg)">&nbsp;</a>
                   <span class="links">
-                    <a class="twitter" href="http://twitter.com/annapawlicka">&nbsp;</a>
-                    <a class="website" href="http://annapawlicka.com">&nbsp;</a>
                   </span>
               </figure>
             </div>
             <div class="text">
-              <h3>Anna Pawlicka</h3>
+              <h3>Przemysław Kamiński</h3>
 
               <p class="title">Software Developer</p>
 
-              <p class="description">Anna Pawlicka codes mostly in Clojure and ClojureScript. She's been a developer on
-                a variety of projects ranging from banking to robotics and big data. When she's not programming, she's
-                organising ClojureBridge London, hiking or hacking on Lego EV3.</p>
+              <p class="description">Web developer. Programming languages explorer. Mathematician. Creating the world of clouds at Mirantis.</p>
               <ul class="tags">
-                <li class="js">JavaScript</li>
-                <li class="clj">Clojure</li>
-                <li class="cljs">ClojureScript</li>
               </ul>
             </div>
           </div>
@@ -1089,17 +1082,16 @@
                   </div>
                 </li>
   
-  
                 <li class="event with-description normal">
                   <div class="short">
                     <div class="time">15:20 - 15:50</div>
                     <div class="name">
-                      <span class="title">TBA</span>
-                      <span class="person">TBA</span>
+                      <span class="title">Data exchange formats</span>
+                      <span class="person">Przemysław Kamiński</span>
                     </div>
                   </div>
                   <div class="long">
-                    <p>TBA</p>
+                    <p> Abstrakt: JSON or XML? Or maybe something else? I will explore the lesser-known areas of data echange formats including ASN.1, Google's Protocol Buffers, Apache Thrift and others.</p>
                   </div>
                   <div class="buttons">
                     <span class="close-button">Close</span>
