speaker: add Przemek's twitter/website

--- a/index.html
+++ b/index.html
@@ -534,6 +534,8 @@
               <figure>
                 <a class="face" style="background-image: url(assets/speakers/przemyslaw_kaminski.jpg)">&nbsp;</a>
                   <span class="links">
+                    <a class="twitter" href="http://twitter.com/CoolGenie">&nbsp;</a>
+                    <a class="website" href="http://www.mini.pw.edu.pl/~pkamins/">&nbsp;</a>
                   </span>
               </figure>
             </div>
