fix: Przemek missing info

--- a/index.html
+++ b/index.html
@@ -546,6 +546,9 @@
 
               <p class="description">Web developer. Programming languages explorer. Mathematician. Creating the world of clouds at Mirantis.</p>
               <ul class="tags">
+                <li class="py">Python</li>
+                <li class="js">JavaScript</li>
+                <li class="hs">Haskell</li>
               </ul>
             </div>
           </div>
@@ -1093,7 +1096,7 @@
                     </div>
                   </div>
                   <div class="long">
-                    <p> Abstrakt: JSON or XML? Or maybe something else? I will explore the lesser-known areas of data echange formats including ASN.1, Google's Protocol Buffers, Apache Thrift and others.</p>
+                    <p>JSON or XML? Or maybe something else? I will explore the lesser-known areas of data echange formats including ASN.1, Google's Protocol Buffers, Apache Thrift and others.</p>
                   </div>
                   <div class="buttons">
                     <span class="close-button">Close</span>
