fix: Erik's last name

--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@
               </figure>
             </div>
             <div class="text">
-              <h3>Erik Michaels-ober</h3>
+              <h3>Erik Michaels-Ober</h3>
 
               <p class="title">Developer Evangelist at SoundCloud</p>
 
@@ -1334,7 +1334,7 @@
                 <div class="time">14:40 - 15:10</div>
                 <div class="name">
                   <span class="title">An Introduction to Crystal</span>
-                  <span class="person">Erik Michaels-ober</span>
+                  <span class="person">Erik Michaels-Ober</span>
                 </div>
               </div>
               <div class="long">
