improv: Edit partners
Change skills matter logo link to polyconf post

--- a/index.html
+++ b/index.html
@@ -2111,7 +2111,7 @@
           <li class="partner infoq"><a href="http://www.infoq.com/"><img src="assets/partners/infoq.png"/></a></li>
           <li class="partner techtrrrs"><a href="https://www.techtrrrs.at/"><img src="assets/partners/techtrrrs.png"/></a></li>
           <li class="partner"><a href="http://devtalk.pl/"><img src="assets/partners/devtalk.jpeg"/></a></li>
-          <li class="partner infoq"><a href="https://skillsmatter.com/"><img src="assets/partners/skills_matter_large.png"/></a></li>
+          <li class="partner infoq"><a href="https://skillsmatter.com/conferences/7206-polyconf"><img src="assets/partners/skills_matter_large.png"/></a></li>
           <li class="partner"><a href="http://ionicpoland.github.io/#/"><img src="assets/partners/ionic-poland-icon.png"/></a></li>
         </ul>
       </div>
