improv: partens section
Add Dziennik Internautów logo od PolyConf website

--- a/index.html
+++ b/index.html
@@ -2113,6 +2113,7 @@
           <li class="partner"><a href="http://devtalk.pl/"><img src="assets/partners/devtalk.jpeg"/></a></li>
           <li class="partner infoq"><a href="https://skillsmatter.com/conferences/7206-polyconf"><img src="assets/partners/skills_matter_large.png"/></a></li>
           <li class="partner"><a href="http://ionicpoland.github.io/#/"><img src="assets/partners/ionic-poland-icon.png"/></a></li>
+          <li class="partner infoq"><a href="http://di.com.pl/2-edycja-polyconf15-juz-od-2-do-4-lipca-w-poznaniu-52313"><img src="assets/partners/logo_di24_kostka.svg"/></a></li>
         </ul>
       </div>
     </div>
