improv: gold sponsors linked
added links to gold sponsors

--- a/index.html
+++ b/index.html
@@ -2024,13 +2024,13 @@
       <div class="gold sponsors">
         <ul>
           <li class="gold sponsor two-col">
-            <div class="logo"><img src="assets/sponsors/mirantis.svg" /></div>
+            <div class="logo"><a href="https://www.mirantis.com/"><img src="assets/sponsors/mirantis.svg"></a></div>
             <div class="description">
               <p> Mirantis is the world’s leading OpenStack company. Mirantis delivers all the software, services, training and support needed for running OpenStack Cloud.<br> Among the top three companies worldwide in contributing open source software to OpenStack, Mirantis has helped build and deploy some of the largest OpenStack clouds at companies such as Cisco, Comcast, Ericsson, NASA, PayPal, Symantec, Samsung, WebEx.<br> OpenStack is to cloud computing what Linux was to open source and operating systems. It unlocks distributed applications, accelerates innovation, and makes programmable infrastructure frictionless to access and vendor-neutral. It transforms virtualization from an efficiency tactic to a whole new compute paradigm.</p>
             </div>
           </li>
           <li class="gold sponsor fyber two-col">
-            <div class="logo"><img src="assets/sponsors/fyber.png" /></div>
+            <div class="logo"><a href="http://www.fyber.com/"><img src="assets/sponsors/fyber.png"></a></div>
             <div class="description">
               <p></br></br></br> Fyber is a leading mobile advertising technology company that empowers app developers to execute smart ad monetization strategies across all connected devices through a unified mobile Supply-Side Platform. Serving approximately 320+ million monthly active users, Fyber works with thousands of the world's leading app developers, publishers and advertisers.</p>
             </div>
